# knot

./: .gitignore  CLAUDE.md  README.ja.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: CLAUDE_CODE_GUIDE.md  DESIGN_DECISIONS.md  HANDOFF.md  SPECIFICATION.md  zenn-draft.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  export_import.rs  images.rs  mod.rs  notes.rs  settings.rs
src-tauri/src/crypto/: cipher.rs  keys.rs  mod.rs  recovery.rs
src-tauri/src/models/: image.rs  mod.rs  note.rs  vault.rs
src-tauri/src/storage/: database.rs  images.rs  mod.rs  notes.rs
src-tauri/tests/: integration_tests.rs
src/components/: ConfirmDialog.tsx
src/components/Auth/: RecoveryKeyModal.tsx  RecoveryScreen.tsx  SetupScreen.tsx  UnlockScreen.tsx  index.ts
src/components/Editor/: Editor.tsx  MarkdownPreview.tsx  Toolbar.tsx  wikilink.ts
src/components/Sidebar/: ChangePasswordModal.tsx  NoteList.tsx  SearchBar.tsx  (+2 more)
src/hooks/: useAutoLock.ts  useKeyboardShortcuts.ts
src/i18n/: backendErrors.ts  index.ts  translations.ts  useTranslation.ts
src/lib/: api.ts  exportPdf.ts  imageUtils.ts  insertImage.ts  passwordStrength.ts  welcomeNote.ts
src/stores/: authStore.test.ts  authStore.ts  fontSizeStore.ts  languageStore.ts  notesStore.test.ts  notesStore.ts  settingsHelper.ts  sortModeStore.ts  themeStore.ts
src/styles/: index.css
src/test/: setup.ts
